--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,8 +58,8 @@ jobs:
               deploy_pipeline $dep
             done
             echo "Deploying $pipeline..."
-            az datafactory pipeline create --factory-name my-adf --resource-group my-resource-group \
-              --name $pipeline --pipeline "$(cat pipelines/$pipeline.json)"
+            az datafactory pipeline create --factory-name komatsu-test-poc --resource-group komatsu-poc \
+              --name $pipeline --pipeline "$(cat ./pipelines/$pipeline.json)"
             deployed+=("$pipeline")
           }
 
