--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
         id: dependencies
         run: |
           echo "PIPELINE_DEPENDENCIES=$(jq -c . dependencies.json)" >> $GITHUB_ENV
+          echo "LINKED_SERVICE_DEPENDENCIES=$(jq -c . linked-services.json)" >> $GITHUB_ENV
 
       - name: Deploy ADF Instance
         run: |
@@ -65,4 +66,29 @@ jobs:
 
           for pipeline in $(echo $dependencies | jq -r 'keys[]'); do
             deploy_pipeline $pipeline
+          done
+
+
+      - name: Deploy Linked Services in Order
+        run: |
+          linked_services='${{ env.LINKED_SERVICE_DEPENDENCIES }}'
+          deployed=()
+
+          deploy_linked_service() {
+            local linked_service=$1
+            if [[ " ${deployed[@]} " =~ " $linked_service " ]]; then
+              echo "$linked_service already deployed."
+              return
+            fi
+            for dep in $(echo $linked_services | jq -r ".[\"$linked_service\"][]"); do
+              deploy_linked_service $dep
+            done
+            echo "Deploying Linked Service: $linked_service..."
+            az datafactory linked-service create --factory-name komatsu-test-poc --resource-group komatsu-poc \
+              --name $linked_service --json-file "linkedService/$linked_service.json"
+            deployed+=("$linked_service")
+          }
+
+          for linked_service in $(echo $linked_services | jq -r 'keys[]'); do
+            deploy_linked_service $linked_service
           done
