--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,8 +84,9 @@ jobs:
               deploy_linked_service $dep
             done
             echo "Deploying Linked Service: $linked_service..."
+            prop="$(cat linkedService/$linked_service.json)"
             az datafactory linked-service create --factory-name komatsu-test-poc --resource-group komatsu-poc \
-              --name $linked_service --properties "$(jq '.properties' $linked_service.json)"
+              --name $linked_service --properties "$(jq '.properties' $prop)"
             deployed+=("$linked_service")
           }
   
