--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ on:
 
 jobs:
   deploy-adf:
+    env:
+        ENV_VAR: "staging"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -59,8 +61,9 @@ jobs:
               deploy_pipeline $dep
             done
             echo "Deploying $pipeline..."
+            NEW_NAME=$(jq -r --arg env "$ENV_VAR" '.name | sub("dev|qa|uat|prod"; $env; "g")' pipeline/$pipeline.json)
             az datafactory pipeline create --factory-name komatsu-test-poc --resource-group komatsu-poc \
-              --name $pipeline --pipeline "$(cat pipeline/$pipeline.json)"
+              --name $NEW_NAME --pipeline "$(cat pipeline/$pipeline.json)"
             deployed+=("$pipeline")
           }
 
