--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Extract Pipeline Order from JSON
         id: get_pipeline_order
         run: |
-          PIPELINES=$(jq -c '.pipelines | sort_by(.dependsOn | length)' dependency.json)
+          PIPELINES=$(jq -c '.pipelines | sort_by(.dependsOn | length)' dependencies.json)
           echo "PIPELINES=$PIPELINES" >> $GITHUB_ENV
 
       - name: Deploy Pipelines in Order
