--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,13 +56,13 @@ jobs:
         run: |
           for row in $(echo "$PIPELINES" | jq -c '.[]'); do
             PIPELINE_NAME=$(echo "$row" | jq -r '.name')
-            NEW_NAME=$(jq -r --arg env "$ENVIRONMENT" --arg pipeline "$PIPELINE_NAME" \
+            NEW_NAME=$(jq -r --arg env "$ENV_VAR" --arg pipeline "$PIPELINE_NAME" \
               '.name | sub("dev|qa|uat|prod"; $env; "g")' pipeline/"$PIPELINE_NAME".json)
             echo "Deploying $PIPELINE_NAME..."
             az deployment group create \
               --resource-group komatsu-poc \
               --template-file pipeline.bicep \
-              --parameters factoryName=$DATA_FACTORY_NAME pipelineName=$NEW_NAME
+              --parameters factoryName=$DATA_FACTORY_NAME env=$ENV_VAR pipelineName=$NEW_NAME
           done
 
       - name: Deploy Linked Services in Order
