--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,18 +77,18 @@ jobs:
             LINKED_SERVICE_NAME=$(echo "$row" | jq -r '.name')
             
             # Modify the name dynamically based on the environment
-            NEW_NAME=$(jq -r --arg env "$ENV_VAR" --arg name "$LINKED_SERVICE_NAME" \
+            NEW_NAME_LS=$(jq -r --arg env "$ENV_VAR" --arg name "$LINKED_SERVICE_NAME" \
               '.name | sub("dev|qa|uat|prod"; $env; "g")' linkedService/"$LINKED_SERVICE_NAME".json)
             linkedService1=$(cat ./linkedService/"$LINKED_SERVICE_NAME".json)
             linkedServices=$(jq -n \
             --arg linkedService1 "$linkedService1" \
             '[ 
               {
-                "name": $NEW_NAME, 
-                "definition": $linkedService1 | fromjson 
+                "name": "$NEW_NAME_LS", 
+                "definition": $linkedService1 | fromjson  
               }
             ]')
-            echo "Deploying Linked Service: $NEW_NAME"
+            echo "Deploying Linked Service: $NEW_NAME_LS"
 
             az deployment group create \
               --resource-group komatsu-poc \
