--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,10 +78,10 @@ jobs:
             LINKED_SERVICE_NAME=$(echo "$row" | jq -r '.name')
 
             NEW_JSON=$(jq --arg env "$ENV_VAR" \
-              '(.name | sub("dev|qa|uat|prod"; $env; "g")) as $newName 
-              | (.properties.typeProperties.connectionString.store.referenceName | sub("dev|qa|uat|prod"; $env; "g")) as $newReference 
-              | .name = $newName 
-              | .properties.typeProperties.connectionString.store.referenceName = $newReference' linkedService/"$LINKED_SERVICE_NAME".json)
+              '(.name // "") as $origName
+              | (.properties.activities[].typeProperties.pipeline.referenceName // "") as $origReference
+              | .name = if $origName != "" then $origName | sub("dev|qa|uat|prod"; $env; "g") else $origName end
+              | .properties.activities[].typeProperties.pipeline.referenceName = if $origReference != "" then $origReference | sub("dev|qa|uat|prod"; $env; "g") else $origReference end' pipeline/"$PIPELINE_NAME".json)
 
             echo "Deploying Linked Service: $NEW_JSON"
             linkedService1=$(cat NEW_JSON)
