--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,21 +79,24 @@ jobs:
             LINKED_SERVICE_NAME=$(echo "$row" | jq -r '.name')
 
             NEW_JSON=$(jq --arg env "$ENV_VAR" \
-            '(.name // "") as $origName
-            | (.properties.typeProperties.connectionString.store.referenceName // "") as $origReference
-            | .name = if $origName != "" then $origName | sub("dev|qa|uat|prod"; $env; "g") else $origName end
-            | .properties.typeProperties.connectionString.store.referenceName = if $origReference != "" then $origReference | sub("dev|qa|uat|prod"; $env; "g") else $origReference end' linkedService/"$LINKED_SERVICE_NAME".json)
+              '(.name // "") as $origName
+              | (.properties.typeProperties.connectionString.store.referenceName // "") as $origReference
+              | .name = if $origName != "" then $origName | sub("dev|qa|uat|prod"; $env; "g") else $origName end
+              | .properties.typeProperties.connectionString.store.referenceName = if $origReference != "" then $origReference | sub("dev|qa|uat|prod"; $env; "g") else $origReference end' linkedService/"$LINKED_SERVICE_NAME".json)
 
             echo "Deploying Linked Service: $NEW_JSON"
-            linkedService1=$(cat $NEW_JSON)
+
+            # Extract the new name from NEW_JSON
+            NEW_NAME_LS=$(echo "$NEW_JSON" | jq -r '.name')
+
             # Construct JSON object correctly
-            linkedServices=$(jq -n --arg linkedService1 "$linkedService1" \
-            '[ 
-              {
-                "name": $name, 
-                "definition": $linkedService1 | fromjson  
-              }
-            ]')
+            linkedServices=$(jq -n --arg name "$NEW_NAME_LS" --argjson definition "$NEW_JSON" \
+              '[ 
+                {
+                  "name": $name, 
+                  "definition": $definition
+                }
+              ]')
             echo "$linkedServices"
             
             az deployment group create \
