--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,33 +37,33 @@ jobs:
             --template-file main.bicep \
             --parameters adfName=komatsu-test-poc
 
-      # - name: Extract Pipeline Order from JSON
-      #   id: get_pipeline_order
-      #   run: |
-      #     PIPELINES=$(jq -c '.pipelines | sort_by(.dependsOn | length)' dependencies.json)
-      #     echo "PIPELINES=$PIPELINES" >> $GITHUB_ENV
+      - name: Extract Pipeline Order from JSON
+        id: get_pipeline_order
+        run: |
+          PIPELINES=$(jq -c '.pipelines | sort_by(.dependsOn | length)' dependencies.json)
+          echo "PIPELINES=$PIPELINES" >> $GITHUB_ENV
 
-      # - name: Deploy Pipelines in Order
-      #   run: |
-      #     for row in $(echo "$PIPELINES" | jq -c '.[]'); do
-        #      NEW_JSON=$(jq --arg env "$ENV_VAR" \
-              # '(.name // "") as $origName
-              # | (.properties.activities[].typeProperties.pipeline.referenceName // "") as $origReference
-              # | .name = if $origName != "" then $origName | sub("dev|qa|uat|prod"; $env; "g") else $origName end
-              # | .properties.activities[].typeProperties.pipeline.referenceName = if $origReference != "" then $origReference | sub("dev|qa|uat|prod"; $env; "g") else $origReference end' pipeline/"$PIPELINE_NAME".json)
+      - name: Deploy Pipelines in Order
+        run: |
+          for row in $(echo "$PIPELINES" | jq -c '.[]'); do
+             NEW_JSON=$(jq --arg env "$ENV_VAR" \
+              '(.name // "") as $origName
+              | (.properties.activities[].typeProperties.pipeline.referenceName // "") as $origReference
+              | .name = if $origName != "" then $origName | sub("dev|qa|uat|prod"; $env; "g") else $origName end
+              | .properties.activities[].typeProperties.pipeline.referenceName = if $origReference != "" then $origReference | sub("dev|qa|uat|prod"; $env; "g") else $origReference end' pipeline/"$PIPELINE_NAME".json)
 
 
-        # echo "$NEW_JSON"
+            echo "$NEW_JSON"
 
-      #       PIPELINE_NAME=$(echo "$row" | jq -r '.name')
-      #       NEW_NAME=$(jq -r --arg env "$ENV_VAR" --arg pipeline "$PIPELINE_NAME" \
-      #         '.name | sub("dev|qa|uat|prod"; $env; "g")' pipeline/"$PIPELINE_NAME".json)
-      #       echo "Deploying $PIPELINE_NAME..."
-      #       az deployment group create \
-      #         --resource-group komatsu-poc \
-      #         --template-file pipeline.bicep \
-      #         --parameters factoryName=komatsu-test-poc pipelineName=$NEW_NAME
-      #     done
+            PIPELINE_NAME=$(echo "$NEW_JSON" | jq -r '.name')
+            NEW_NAME=$(jq -r --arg env "$ENV_VAR" --arg pipeline "$PIPELINE_NAME" \
+              '.name | sub("dev|qa|uat|prod"; $env; "g")' pipeline/"$PIPELINE_NAME".json)
+            echo "Deploying $PIPELINE_NAME..."
+            az deployment group create \
+              --resource-group komatsu-poc \
+              --template-file pipeline.bicep \
+              --parameters factoryName=komatsu-test-poc pipelineName=$NEW_NAME
+          done
 
       - name: Extract Linked Service Order from JSON
         id: get_linked_service_order
