--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
             az deployment group create \
               --resource-group komatsu-poc \
               --template-file pipeline.bicep \
-              --parameters factoryName=komatsu-test-poc pipelineName=$pipeline
+              --parameters factoryName=komatsu-test-poc pipelines=$pipeline
           done
 
       - name: Extract Linked Service Order from JSON
