--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,27 +47,48 @@ jobs:
         run: |
           for row in $(echo "$PIPELINES" | jq -c '.[]'); do
             PIPELINE_NAME=$(echo "$row" | jq -r '.name')
-            NEW_JSON=$(jq --arg env "$ENV_VAR" \
-              '(.name // "") as $origName
-              | (.properties.activities[].typeProperties.pipeline.referenceName // "") as $origReference
+
+            # Read and transform JSON
+            NEW_JSON=$(jq --arg env "$ENV_VAR" '
+              (.name // "") as $origName
               | .name = if $origName != "" then $origName | sub("dev|qa|uat|prod"; $env; "g") else $origName end
-              | .properties.activities[].typeProperties.pipeline.referenceName = if $origReference != "" then $origReference | sub("dev|qa|uat|prod"; $env; "g") else $origReference end' pipeline/"$PIPELINE_NAME".json)
+              | (.properties.activities[]? | select(has("typeProperties")) | .typeProperties.pipeline.referenceName)? |= 
+                if . != null then sub("dev|qa|uat|prod"; $env; "g") else . end' pipeline/"$PIPELINE_NAME".json)
 
+            echo "Updated JSON: $NEW_JSON"
 
-            echo "$NEW_JSON"
+            # Ensure NEW_JSON is valid JSON
+            if [[ -z "$NEW_JSON" || "$NEW_JSON" == "null" ]]; then
+                echo "Error: NEW_JSON is empty or invalid" >&2
+                exit 1
+            fi
+
+            # Extract the new pipeline name
             NEW_NAME_PL=$(echo "$NEW_JSON" | jq -r '.name')
-            pipeline=$(jq -n --arg name "$NEW_NAME_PL" --argjson definition "$NEW_JSON" \
-              '[ 
+
+            # Construct JSON object correctly
+            pipeline=$(jq -n --arg name "$NEW_NAME_PL" --argjson definition "$NEW_JSON" '
+              [
                 {
                   "name": $name, 
                   "definition": $definition
                 }
               ]')
+
+            echo "Final pipeline JSON: $pipeline"
+
+            # Ensure pipeline is valid JSON
+            if [[ -z "$pipeline" || "$pipeline" == "null" ]]; then
+                echo "Error: pipeline JSON is empty or invalid" >&2
+                exit 1
+            fi
+
             az deployment group create \
               --resource-group komatsu-poc \
               --template-file pipeline.bicep \
-              --parameters factoryName=komatsu-test-poc pipelines=$pipeline
+              --parameters factoryName=komatsu-test-poc pipelines="$pipeline"
           done
+
 
       - name: Extract Linked Service Order from JSON
         id: get_linked_service_order
