--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,9 +105,12 @@ jobs:
 
             NEW_JSON=$(jq --arg env "$ENV_VAR" \
               '(.name // "") as $origName
-              | (.properties.typeProperties.connectionString.store.referenceName // "") as $origReference
+              | (.. | .referenceName? // empty) as $origReference
               | .name = if $origName != "" then $origName | sub("dev|qa|uat|prod"; $env; "g") else $origName end
-              | .properties.typeProperties.connectionString.store.referenceName = if $origReference != "" then $origReference | sub("dev|qa|uat|prod"; $env; "g") else $origReference end' linkedService/"$LINKED_SERVICE_NAME".json)
+              | if $origReference != "" then
+                  (.. | select(.referenceName?)) |= (. = sub("dev|qa|uat|prod"; $env; "g"))
+                else
+                  . end' linkedService/"$LINKED_SERVICE_NAME".json)
 
             echo "Deploying Linked Service: $NEW_JSON"
 
