--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Create and push new version tag
         run: |
-          git config --global user.email "deepika.jadhav@infosys.com"
-          git config --global user.name "DMJ57"
+          git config --global user.email "souvikg90@gmail.com"
+          git config --global user.name "souvikg90"
           git tag -a $NEW_VERSION -m "Release version $NEW_VERSION"
           git push origin $NEW_VERSION
