--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - main
     # This workflow will run for any push to dev, test, or main branches.
+permissions:
+  contents: write
 
 jobs:
   versioning:
@@ -32,7 +34,7 @@ jobs:
 
       - name: Create and push new version tag
         run: |
-          git config user.email "souvikg90@gmail.com"
-          git config user.name "souvikg90"
+          git config --global user.email "souvikg90@gmail.com"
+          git config --global user.name "souvikg90"
           git tag -a $NEW_VERSION -m "Release version $NEW_VERSION"
           git push origin $NEW_VERSION
