--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -142,8 +142,8 @@ jobs:
       - name: Extract Linked Service Order from JSON
         id: get_linked_service_order
         run: |
-          echo "LINKED_SERVICES=$(jq -c '.linkedServices' dependencies.json)" >> $GITHUB_ENV
-          echo "PIPELINES=$(jq -c '.pipelines' dependencies.json)" >> $GITHUB_ENV
+          echo "LINKED_SERVICES=$(jq -c '.linkedServices' ./dependencies.json)" >> $GITHUB_ENV
+          echo "PIPELINES=$(jq -c '.pipelines' ./dependencies.json)" >> $GITHUB_ENV
           echo "LINKED_SERVICES: $LINKED_SERVICES"
           echo "PIPELINES: $PIPELINES"
         
