--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,9 +143,9 @@ jobs:
         id: get_linked_service_order
         run: |
           echo "LINKED_SERVICES=$(jq -c '.linkedServices' ./dependencies.json)" >> $GITHUB_ENV
-          PIPELINES=$(jq -c '.pipelines | sort_by(.dependsOn | length)' dependencies.json)
+          echo "PIPELINES=$(jq -c '.pipelines' ./dependencies.json)" >> $GITHUB_ENV
           echo "LINKED_SERVICES: $LINKED_SERVICES"
-          echo "PIPELINES: $PIPELINES" >> $GITHUB_ENV
+          echo "PIPELINES: $PIPELINES"
         
       - name: Deploy Linked Services in Order
         run: |
